Added more examples